--- a/src/Component/desciption/discription.css
+++ b/src/Component/desciption/discription.css
@@ -1,3 +1,13 @@
+@media only screen and (max-width: 600px) {
+  .discrip ul {
+    justify-content: space-around;
+
+    flex-wrap: wrap;
+  }
+  hr {
+    width: 100vw;
+  }
+}
 .discrip ul {
   justify-content: space-around;
   display: flex;
