--- a/src/Component/footter/footter.css
+++ b/src/Component/footter/footter.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 600px) {
+  .foot {
+    height: 500px;
+  }
+}
+
 .btn-foot {
   border-radius: 50px;
   border: none;
