--- a/src/Component/carosuel/carosuel.scss
+++ b/src/Component/carosuel/carosuel.scss
@@ -63,59 +63,67 @@ $size-height: 300px;
   }
 }
 
-// @media screen and (max-width: 768px) {
-//   $size-width: 240px;
-//   $size-height: 150px;
-//   .carousel-wrapper {
-//     width: $size-width * 1.3;
-//     height: $size-height * 1.4;
-//   }
+@media screen and (max-width: 600px) {
+  $size-width: 240px;
+  $size-height: 150px;
 
-//   .carousel-container {
-//     width: $size-width;
-//     height: $size-height;
-//   }
-
-//   .carousel {
-//     width: $size-width * 3;
-//     > div {
-//       width: $size-width;
-//       height: $size-height;
-//     }
-//   }
-
-//   @keyframes sliding {
-//     30% {
-//       transform: translateX(0);
-//     }
-//     35% {
-//       transform: translateX(-$size-width);
-//     }
-//     65% {
-//       transform: translateX(-$size-width);
-//     }
-//     70% {
-//       transform: translateX(-$size-width * 2);
-//     }
-//     98% {
-//       transform: translateX(-$size-width * 2);
-//     }
-//     100% {
-//       transform: translateX(0);
-//     }
-//   }
-// }
-@media screen and (min-width: 600px) {
-  $size-width: 250px;
-  $size-height: 250px;
-  .carousel-wrapper1 {
-    width: $size-width * 0.5;
-    height: $size-height * 0.5;
+  .carousel-wrapper {
+    width: $size-width * 1.3;
+    height: $size-height * 1.4;
   }
-  .carousel-container1 {
-    margin: 0px;
+
+  .carousel-container {
     width: $size-width;
     height: $size-height;
+  }
+
+  .carousel {
+    width: $size-width * 3;
+    > div {
+      width: $size-width;
+      height: $size-height;
+    }
+  }
+
+  .carousel-wrapper1 {
+    width: $size-width * 1.3;
+    height: $size-height * 1.4;
+  }
+
+  .carousel-container1 {
+    width: $size-width;
+    height: $size-height;
+  }
+
+  .carousel1 {
+    $size-width: 240px;
+    $size-height: 150px;
+    width: $size-width * 3;
+    > div {
+      width: $size-width;
+      height: $size-height;
+    }
+  }
+
+  @keyframes sliding {
+    30% {
+      transform: translateX(0);
+    }
+    35% {
+      transform: translateX(-$size-width);
+    }
+    65% {
+      transform: translateX(-$size-width);
+    }
+    70% {
+      transform: translateX(-$size-width * 2);
+    }
+    98% {
+      transform: translateX(-$size-width * 2);
+    }
+    100% {
+      transform: translateX(0);
+    }
   }
 }
 
@@ -181,48 +189,48 @@ $size-height: 300px;
   }
 }
 
-// @media screen and (max-width: 768px) {
-//   $size-width: 240px;
-//   $size-height: 150px;
-//   .carousel-wrapper {
-//     width: $size-width * 1.3;
-//     height: $size-height * 1.4;
-//   }
+@media screen and (max-width: 600px) {
+  $size-width: 240px;
+  $size-height: 150px;
+  .carousel-wrapper1 {
+    width: $size-width * 1.3;
+    height: $size-height * 1.4;
+  }
 
-//   .carousel-container1 {
-//     width: $size-width;
-//     height: $size-height;
-//   }
+  .carousel-container1 {
+    width: $size-width;
+    height: $size-height;
+  }
 
-//   .carousel1 {
-//     width: $size-width * 3;
-//     > div {
-//       width: $size-width;
-//       height: $size-height;
-//     }
-//   }
+  .carousel1 {
+    width: $size-width * 3;
+    > div {
+      width: $size-width;
+      height: $size-height;
+    }
+  }
 
-//   @keyframes sliding {
-//     30% {
-//       transform: translateX(0);
-//     }
-//     35% {
-//       transform: translateX(-$size-width);
-//     }
-//     65% {
-//       transform: translateX(-$size-width);
-//     }
-//     70% {
-//       transform: translateX(-$size-width * 2);
-//     }
-//     98% {
-//       transform: translateX(-$size-width * 2);
-//     }
-//     100% {
-//       transform: translateX(0);
-//     }
-//   }
-// }
+  @keyframes sliding {
+    30% {
+      transform: translateX(0);
+    }
+    35% {
+      transform: translateX(-$size-width);
+    }
+    65% {
+      transform: translateX(-$size-width);
+    }
+    70% {
+      transform: translateX(-$size-width * 2);
+    }
+    98% {
+      transform: translateX(-$size-width * 2);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+}
 .carol {
   justify-content: space-around;
 
