--- a/src/Component/containent/contain.css
+++ b/src/Component/containent/contain.css
@@ -1,16 +1,19 @@
 @media only screen and (max-width: 600px) {
   .contain {
     flex-wrap: wrap;
+
     display: block;
   }
   .reservation {
-    width: 100vw;
-  }
-  .about-hotel {
-    width: 100vw;
+    display: block;
+    width: 100%;
   }
   .places {
-    width: 100vw;
+    display: block;
+    width: 100%;
+  }
+  .property-card {
+    margin: auto;
   }
 }
 
@@ -18,9 +21,15 @@
   margin-top: 20px;
   display: flex;
 }
-
+@media only screen and(min-width:600px) {
+  .reservation {
+    width: 22%;
+  }
+  .places {
+    width: 20%;
+  }
+}
 .reservation {
-  width: 22%;
   background-color: bisque;
   border-radius: 10px;
 }
@@ -38,7 +47,7 @@
 .places {
   padding: 0px 20px 0px 20px;
   background-color: burlywood;
-  width: 20%;
+  text-align: center;
   border-radius: 10px;
 }
 
